--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(OUTPUT_DIR "out")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})
 
-add_executable(Cpp20Jest main.cpp animal.cpp animal.h dog.cpp dog.h sheep.cpp sheep.h cat.cpp cat.h)
+add_executable(Cpp20Jest main.cpp animal.cpp animal.h dog.cpp dog.h sheep.cpp sheep.h cat.cpp cat.h animaltype.h)
